[gd_scene load_steps=12 format=2]

[ext_resource path="res://Out of sight.tres" type="Material" id=1]
[ext_resource path="res://Item.gd" type="Script" id=2]
[ext_resource path="res://2D Smooth Outline.shader" type="Shader" id=3]
[ext_resource path="res://sound/reload.ogg" type="AudioStream" id=4]
[ext_resource path="res://sound/Handgun.ogg" type="AudioStream" id=5]
[ext_resource path="res://sound/fire_fail.ogg" type="AudioStream" id=6]
[ext_resource path="res://sound/knife hit.ogg" type="AudioStream" id=7]
[ext_resource path="res://sound/Melee Weapon Swings (item 2).ogg" type="AudioStream" id=8]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/outlineColor = Color( 1, 1, 1, 1 )
shader_param/width = 5.0

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="ConvexPolygonShape2D" id=3]
resource_local_to_scene = true
points = PoolVector2Array( 0, 0, 20, 20, -20, 20 )

[node name="Item" type="Node2D" groups=[
"Save",
"Items",
]]
light_mask = 2
material = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Attachments" type="Node2D" parent="."]
visible = false
light_mask = 2

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
material = SubResource( 1 )
scale = Vector2( 0.1, 0.1 )

[node name="Area2D" type="Area2D" parent="."]
editor/display_folded = true
light_mask = 2
monitoring = false
monitorable = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 2
shape = SubResource( 2 )

[node name="Melee_area" type="Area2D" parent="."]
editor/display_folded = true
light_mask = 2
input_pickable = false
monitoring = false
collision_layer = 16
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Melee_area"]
light_mask = 2
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
light_mask = 2

[node name="Reload" type="AudioStreamPlayer2D" parent="."]
light_mask = 2
stream = ExtResource( 4 )
max_distance = 500.0
bus = "Effects"
area_mask = 1048575

[node name="Bang" type="AudioStreamPlayer2D" parent="."]
light_mask = 2
stream = ExtResource( 5 )
max_distance = 3000.0
attenuation = 2.0
bus = "Effects"
area_mask = 1048575

[node name="Fire_fail" type="AudioStreamPlayer2D" parent="."]
light_mask = 2
stream = ExtResource( 6 )
pitch_scale = 1.5
max_distance = 200.0
bus = "Effects"
area_mask = 1048575

[node name="Melee_hit" type="AudioStreamPlayer2D" parent="."]
light_mask = 2
stream = ExtResource( 7 )
max_distance = 200.0
bus = "Effects"
area_mask = 1048575

[node name="Melee_swing" type="AudioStreamPlayer2D" parent="."]
light_mask = 2
stream = ExtResource( 8 )
max_distance = 100.0
bus = "Effects"
area_mask = 1048575

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="Melee_area" to="." method="_on_Melee_area_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_screen_exited"]
[connection signal="finished" from="Reload" to="." method="_on_ready" binds= [ "reload" ]]
[connection signal="finished" from="Fire_fail" to="." method="_on_ready" binds= [ "fire_fail" ]]
[connection signal="timeout" from="Timer" to="." method="_on_ready" binds= [ "timer" ]]
